--- a/src/index.html
+++ b/src/index.html
@@ -9,29 +9,64 @@
       <div class="row">
         <div class="col-md-6 offset-md-3 box-decore">
           <h1 class="text-center">Super Battle Game</h1>
-          <form>
-            <div class="form-group">
-              <label for="input-1">Input 1</label>
-              <input type="text" class="form-control" id="input-1" aria-describedby="input">
-              <small id="input1-Help" class="form-text text-muted">You can put your thoughts here.</small>
-            </div>
-            <div class="form-group">
-              <label for="input-2">Input 2</label>
-              <input type="text" class="form-control" id="input-2">
-            </div>
-            <div class="form-group form-check">
-              <input type="checkbox" class="form-check-input" id="checkbox-1">
-              <label class="form-check-label" for="checkbox-1">Check me out</label>
-            </div>
-            <button id="submitBtn" type="submit" class="btn btn-primary btn-lg btn-block">Submit</button>
-          </form>
+          <div class="current-turn">
+            <h4 class="text-center">It is <span id="current-user-name">Roses turn</span></h4>
+          </div>
         </div>
       </div>
+
+      <div class="row">
+        <div class="pick-golden-girl">
+          <div id="0" class="girl"><h2>Blanche Devereaux</h2>
+            <img src="https://i.pinimg.com/originals/bd/1e/54/bd1e5420b9645d2fed100c82922c6466.jpg" alt="">
+          </div>
+          <div id="1" class="girl">
+            <h2>Sophia Petrillo</h2>
+            <img src="https://vignette.wikia.nocookie.net/goldengirls/images/9/9e/Sophia1.jpg/revision/latest/top-crop/width/360/height/450?cb=20100305000442" alt="">
+          </div>
+          <div id="2" class="girl">
+            <h2>Dorothy Zbornak</h2>
+            <img src="https://vignette.wikia.nocookie.net/goldengirls/images/4/4e/Beaarthur_%281%29.jpg/revision/latest/top-crop/width/360/height/450?cb=20101208103602" alt="">
+          </div>
+          <div id="3" class="girl">
+            <h2>Rose Nylund</h2>
+            <img src="https://i.pinimg.com/236x/7a/5d/fe/7a5dfecd125de749c030e14bc59dc00e--the-golden-girls-golden-age.jpg" alt="">
+          </div>
+        </div>
+      </div>
+
   
       <!-- output box  -->
-      <div class="row">
-        <div class="col-md-6 offset-md-3">
-          <div class="output">Output here</div>
+      <div class="battle-board">
+
+        <div class="row ">
+          <div class="col-md-4">
+              <h3 id="user2-title">Rose</h3>
+              <img id="user2-img" src="http://unsplash.it/200/300" alt="">
+          </div>
+          <div class="col-md-4">
+            <div class="draw-hold">
+              <h3 class="text-center">VS</h3>
+              <button class="btn btn-success btn-block">Draw</button>
+              <button class="btn btn-warning btn-block">Hold</button>
+            </div>
+            <div class="attack-hold">
+              <button class="btn btn-danger btn-block">Attack</button>
+              <button class="btn btn-warning btn-block">Hold</button>
+            </div>
+          </div>
+          <div class="col-md-4">  
+            <h3 id="user2-title">Rose</h3>
+            <img id="user2-img" src="http://unsplash.it/200/300" alt="">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <h4>User 1 Stats</h4>
+          </div>
+          <div class="col-md-4 offset-md-4">
+            <h4>User 2 Stats</h4>
+          </div>
         </div>
       </div>
     </div>
